<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_flym">About Flym</string>
    <string name="about_us">About Us</string>
    <string name="accept">ACCEPT</string>
    <string name="ad_to_bs">A.D To B.S</string>
    <string name="add_another_reminder">Add More</string>
    <string name="add_custom_feed">Add a custom feed or search for one</string>
    <string name="add_group_title">Select group name</string>
    <string name="add_note_text">Add Note</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_to_google_calendar">+ Google Cal</string>
    <string name="add_to_my_event">+My Event</string>
    <string name="add_to_myevent">+ My Events</string>
    <string name="add_widget">Add widget</string>
    <string name="addon_description">Here, you can enable or disable modules so that Nepali Patro menus will be clean and they won\'t disturb if you do not use them.</string>
    <string name="addons">Addons</string>
    <string name="addons_prefs_description_loadshedding">Enable load shedding addon to view day and group wise schedule.</string>
    <string name="addons_prefs_description_news">Keep in touch with news from various Nepali online pubilications and media.</string>
    <string name="all">All News</string>
    <string name="all_feeds">All feeds (incl. future)</string>
    <string name="allday">All Day</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_intro">App Tour</string>
    <string name="app_name">Nepali Patro</string>
    <string name="app_tour_events">Complete Festivals and Events</string>
    <string name="app_tour_events_desc">Never miss to plan for religious festivals or formal events. Easy to use interface for finding dates, festivals and events in Nepali &amp; English.</string>
    <string name="app_tour_news">News &amp; Exchange Rates</string>
    <string name="app_tour_news_desc">Never miss breaking news from Nepal. Easy access to daily exchange rates.</string>
    <string name="app_tour_panchanga">Panchanga &amp; Suva Sait</string>
    <string name="app_tour_panchanga_desc">Little more interested in \'Vedic Astrology\'? Get more on \'Panchanga\' and find out \'Suva Sait\' for marriage, bratabandha, rudri, hom etc.</string>
    <string name="app_tour_rashifal">Rashifal</string>
    <string name="app_tour_rashifal_desc">Know your daily, weekly, monthly and yearly Rashifal.</string>
    <string name="app_tour_welcome">Welcome to\10 Nepali Patro</string>
    <string name="app_tour_welcome_desc">A complete informative Nepali Patro/ Calendar (BS) on your phone. Get updated with Nepali dates, tithi and events to organize yourself.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="apr">Apr</string>
    <string name="april">April</string>
    <string name="aquarius">Aquarius</string>
    <string name="aries">Aries</string>
    <string name="ashadh">Ashadh</string>
    <string name="ashwin">Ashwin</string>
    <string name="ask_me_later">Ask Me Later</string>
    <string name="aug">Aug</string>
    <string name="august">August</string>
    <string name="back_again_to_quit">Press back once more to exit</string>
    <string name="baishakh">Baishakh</string>
    <string name="bhadra">Bhadra</string>
    <string name="bikram_sambat">Bikram Sambat</string>
    <string name="bikram_sambat_short">B.S.</string>
    <string name="blog">Nepali Patro Blog</string>
    <string name="blog_add_comments">Add your comment</string>
    <string name="blog_learn_more">Learn More</string>
    <string name="blog_many_response">%1$s responses to %2$s</string>
    <string name="blog_no_response">No response to %1$s</string>
    <string name="blog_one_response">%1$s response to %2$s</string>
    <string name="blog_post_comment_hint">Your comment to the post</string>
    <string name="blog_short">Blogs</string>
    <string name="blue">Blue</string>
    <string name="browser">Browser</string>
    <string name="bs_to_ad">B.S To A.D</string>
    <string name="buy">Buy</string>
    <string name="buying">BUYING</string>
    <string name="calendar">Calendar</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cancer">Cancer</string>
    <string name="cant_open_link">No application found for this link</string>
    <string name="capricorn">Capricorn</string>
    <string name="chaitra">Chaitra</string>
    <string name="checking_for_update">Checking for updates…</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="close">Close</string>
    <string name="colon">: </string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">55957d172daf4aeaa2fb8fbde0f1104c</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="comment">Comment</string>
    <string name="comment_success">Comment posted successfully, it will be reviewed and published shortly.</string>
    <string name="comment_validation">Name, email and content is required to submit your comment.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="fri">Fri</string>
    <string name="mon">Mon</string>
    <string name="nepali_patro">Nepali Patro</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
</resources>