<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/top" android:paddingLeft="@dimen/dp_8" android:paddingRight="@dimen/dp_8" android:layout_width="match_parent" android:layout_height="match_parent" android:baselineAligned="false">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/datewrapper" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="2">
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:id="@+id/bsmonthyear" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
        <TextView android:textSize="@dimen/sp_40" android:textColor="@color/white" android:gravity="center" android:id="@+id/bsday" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="-4dp" android:maxLines="1"/>
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:id="@+id/dow" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
        <TextView android:textSize="@dimen/sp_10" android:textColor="@color/white" android:gravity="center" android:id="@+id/addate" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/white" android:gravity="center" android:id="@+id/time" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_4" android:layout_weight="1">
                <ImageView android:layout_width="@dimen/dp_16" android:layout_height="@dimen/dp_16" android:src="@drawable/ic_sunrise_clear" android:contentDescription="@string/nepali_patro"/>
                <TextView android:textSize="@dimen/text_xsmall" android:textColor="@color/white" android:id="@+id/textViewTodaySunRise" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginTop="@dimen/dp_4" android:layout_weight="1">
                <ImageView android:layout_width="@dimen/dp_16" android:layout_height="@dimen/dp_16" android:src="@drawable/ic_sunset_clear" android:contentDescription="@string/nepali_patro"/>
                <TextView android:textSize="@dimen/text_xsmall" android:textColor="@color/white" android:id="@+id/textViewTodaySunSet" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="3">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:gravity="center" android:id="@+id/sun" android:padding="@dimen/dp_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/sun" android:maxLength="2" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:gravity="center" android:id="@+id/mon" android:padding="@dimen/dp_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/mon" android:maxLength="2" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:gravity="center" android:id="@+id/tue" android:padding="@dimen/dp_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/tue" android:maxLength="2" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:gravity="center" android:id="@+id/wed" android:padding="@dimen/dp_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/wed" android:maxLength="2" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:gravity="center" android:id="@+id/thu" android:padding="@dimen/dp_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/thu" android:maxLength="2" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:gravity="center" android:id="@+id/fri" android:padding="@dimen/dp_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/fri" android:maxLength="2" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/white" android:gravity="center" android:id="@+id/sat" android:padding="@dimen/dp_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/sat" android:maxLength="2" android:layout_weight="1"/>
        </LinearLayout>
        <GridView android:id="@+id/gridViewCalendar" android:padding="@dimen/dp_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:horizontalSpacing="@dimen/dp_1" android:verticalSpacing="@dimen/dp_1" android:numColumns="7"/>
    </LinearLayout>
</LinearLayout>
